--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "three": "^0.143.0",
+    "three-rounded-box": "^0.1.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "electron": "^20.0.0",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
     "vite": "^3.0.0"
   }
 }
