--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "electron:start": "electron ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "three": "^0.143.0",
